src/test/deca/context/valid/testNew.deca
class A {
    int a;
}
{
    A x = new A();
}
