src/test/deca/context/invalid/testProtectedField1.deca
// Description : Accès à un champ protégé depuis le main
class A {
    protected int a;
}
{
    A x = new A();
    x.a = 2;
}
